[package]
name = "opentelemetry-journald-logs-unofficial"
version = "0.2.0"
edition = "2021"
keywords = ["opentelemetry", "journald", "logs", "tracing"]
description = "OpenTelemetry logs exporter for journald - unofficial, experimental"
repository = "https://github.com/lalitb/opentelemetry-journald-logs-unofficial"
homepage = "https://github.com/lalitb/opentelemetry-journald-logs-unofficial"
license = "Apache-2.0"

[dependencies]
opentelemetry = {  version = "0.23" , features = ["logs"]}
opentelemetry_sdk = {  version = "0.23", features = ["logs"] }
libc = "0.2"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"], optional =true}
serde_json = {version = "1.0", optional = true}


[dev-dependencies]
opentelemetry-appender-tracing = { version ="0.4.0"}
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["registry", "std"] }
microbench = "0.5"

[features]
logs_level_enabled = ["opentelemetry/logs_level_enabled", "opentelemetry_sdk/logs_level_enabled"]
default = ["logs_level_enabled"]
json = ["serde", "serde_json"]

